Update login and user profile section